# ExpertMatchAI

./: .eslintrc.json  .gitignore  Makefile  README.md  docker-compose.yml  env.example.txt  package.json  pnpm-lock.yaml  railway.json  tsconfig.json  vercel.json
apps/web/: Dockerfile  env.local.example  next.config.mjs  package.json  playwright.config.ts  tailwind.config.ts  tsconfig.json  vitest.config.ts
apps/web/app/: globals.css  layout.tsx  not-found.tsx  providers.tsx
apps/web/app/(marketing)/: page.tsx
apps/web/app/admin/: page.tsx
apps/web/app/api/admin/stats/: route.ts
apps/web/app/api/admin/upload/: route.ts
apps/web/app/api/health/: route.ts
apps/web/app/api/search/: route.ts
apps/web/app/experts/[id]/: loading.tsx  page.tsx
apps/web/app/search/: loading.tsx  page.tsx
apps/web/components/: Carousel.tsx  ContactPanel.tsx  DonutScore.tsx  ExpertCard.tsx  FilterPanel.tsx  KeywordChips.tsx  MatchBadge.tsx  SearchBar.tsx  StackedCards.tsx  WhyThisMatch.tsx
apps/web/components/ui/: button.tsx
apps/web/lib/: auth.ts  bm25.ts  csv.ts  prisma.ts  scoring.ts
apps/web/tests/: csv-parse.test.ts  scoring.test.ts
apps/web/tests-e2e/: search.spec.ts
apps/web/types/: wink-bm25-text-search.d.ts
backend/: Dockerfile  env.example  pyproject.toml  requirements.txt
backend/app/: __init__.py  ingest.py  main.py
backend/scripts/: build_index.py
backend/tests/: test_contact_click.py  test_embed.py  test_search.py  test_search_pipeline.py
prisma/: schema.prisma
scripts/: seed.ts
scripts/utils/: csv.ts
(+3 files in other folders)
